Bug 1044773 - the window can be null when AudioChannelAgent is created, r=roc